<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.AboutActivity"
    android:background="@color/surface_surface_1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/surface_surface_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_icons_android_ic_arrow_back"
            android:id="@+id/backArrow"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeadlineLargeNLv1Left"
        android:text="@string/aboutTitle"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/aboutSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutSubtitle"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/aboutTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/HeadlineMediumNLv1Left"/>

    <TextView
        android:id="@+id/classTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/aboutSubtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/aboutClass"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        style="@style/BodyLargeNLv1Left"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="8dp"
        android:id="@+id/logoCard"
        app:layout_constraintTop_toBottomOf="@id/classTitle"
        android:background="@color/surface_surface_2">

        <ImageView
            android:layout_width="107dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_graphics_logo_sofascore_lettering"
            android:layout_marginVertical="31dp"
            android:layout_marginHorizontal="86dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_graphics_logo_android"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="238dp"/>

    </androidx.cardview.widget.CardView>

<hr.tvz.weatherapp.view.AboutTextView
    android:id="@+id/appNameTV"
    app:layout_constraintTop_toBottomOf="@id/logoCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:titleText="@string/aboutAppNameTitle"
    app:valueText="@string/aboutAppNameText"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

    <hr.tvz.weatherapp.view.AboutTextView
        android:id="@+id/apiCreditTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/aboutApiCreditTitle"
        app:valueText="@string/aboutApiCreditText"
        app:layout_constraintTop_toBottomOf="@id/appNameTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <hr.tvz.weatherapp.view.AboutTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/apiCreditTV"
        app:titleText="@string/aboutDeveloperTitle"
        app:valueText="@string/aboutDeveloperText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>